correction footer version mobile ok css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -630,56 +630,55 @@ h1 {
   }
 
    
-
-  footer {
-    display: block;
-    background-color: #353535;
-    margin: 0;
-    border: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    padding: 25px;
-    color: white;
-  }
-  
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 370px) {
     footer {
-      text-align: center;
+      display: block;
+      background-color: #353535;
+      margin: 0;
+      padding: 0;
+      font-size: 100%;
+      vertical-align: baseline;
+      padding: 25px;
+      color: white;
     }
   }
-  footer h3 {
-    font-family: "Shrikhand", "sans-serif";
-    padding: 5px 0 20px 0;
-  }
+   
+    @media screen and (min-width: 768px) {
+      footer {
+        text-align: center;
+      }
+    }
+    footer h3 {
+      font-family: "Shrikhand" ;
+      padding: 5px 0 20px 0;
+    
+    }
   
-  footer a {
-    color: white;
-  }
-  footer ul {
-    list-style-type: none;
-  }
-  footer ul li {
-    padding: 5px 0 5px 0;
-  }
-  footer ul .fa-utensils {
-    margin-right: 12px;
-  }
-  footer ul .fa-hands-helping {
-    margin-right: 5px;
-  }
-  
-  .fa-handshake {
-    transform: rotate(-45deg);
-  }
-  
-  .fa-utensils {
-    padding-right: 5px;
-  }
-}
-  
-
-  
-
+    footer a {
+      color: white;
+      text-decoration: none;
+    }
+    footer ul {
+      list-style-type: none;
+    }
+    footer ul li {
+      padding: 5px 0 5px 0;
+    }
+    footer ul .fa-utensils {
+      margin-right: 12px;
+    }
+    footer ul .fa-hands-helping {
+      margin-right: 5px;
+    }
+    
+    .fa-handshake {
+      transform: rotate(-45deg);
+    }
+    
+    .fa-utensils {
+      padding-right: 5px;
+    }
+  }  
 
   
 
